fix word div spacing not equal to text spacing bug

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1685,6 +1685,7 @@ key {
       user-select: none;
       .word {
         position: relative;
+        margin: 0.3rem;
       }
     }
     .correct {
